Update icons and index.html

--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Yunga</title>
-
-  <!-- Bootstrap -->
+  <title>Santa Rosa - Jaén | Yunga</title>
+  <!-- meta data -->
+  <meta name="author" content="Keny Romero">
+  <meta name="description" content="Sitio Web para compartir Fotografias del Distrito de Santa Rosa Jaén: Turismo, Naturaleza y más">
+  <!-- Bootstrap and css-->
   <link href="assets/bootstrap/css/bootstrap.paper.css" rel="stylesheet">
   <link href="assets/css/app.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
-  <link rel="icon" href="favicon.ico">
+  <!-- icons -->
+  <link rel="shortcut icon" type="image/ico" href="favicon.ico">
+  <link rel="apple-touch-icon" href="assets/icons/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" sizes="57x57" href="assets/icons/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/icons/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/icons/apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/icons/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/icons/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="assets/icons/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/icons/apple-touch-icon-152x152.png" />
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
